grammar.js
    source_file: ($) => repeat($._top),

    _top: ($) =>
      choice(
        $.function_definition,
        $.param,
        $.global,
        $.exec,
        $.require,
        $.type_alias,
        $.namespace,
      ),

    namespace: ($) =>
      seq(
        "namespace",
        field("name", $.identifier),
        field("code", braces(repeat($._top))),
      ),

    // require ------
    from: ($) => seq("from", field("id", $.identifier)),

    require: ($) =>
      seq(
        optional($.from),
        "require",
        field("file", repeat1($.string_literal)),
      ),
    // ------

    // exec ------
    global: ($) =>
      seq(
        field("type", $.type),
        field("name", $.identifier),
        "=",
        field("value", $._gepxr),
        ";",
      ),

    _gepxr: ($) =>
      choice($._expr, seq("{", rtuple1($._expr), "}"), $.string_literal),
    // ------

    // param ------
    _arr_access: ($) =>
      prec.right(
        seq(
          field("unscaled", optional(".")),
          field("index", brackets($._arr_access_i)),
        ),
      ),

    alignment: (_) => choice("#aligned", "#unaligned"),

    _peop1: ($) =>
      prec(
        PREC.unary,
        choice(seq("!", optional($.castop)), seq("-", optional($.castop))),
      ),

    unary_expr: ($) => prec.left(PREC.unary, seq($._peop1, $._expr)),

    cast_expr: ($) =>
      prec(
        PREC.unary,
        seq(field("cast", parens($._cast)), field("expression", $._expr)),
      ),

    _mult_op: ($) =>
      choice(
        ...multiplicativeOperators.map((operator) =>
          seq(operator, optional($.castop)),
        ),
      ),
    _add_op: ($) =>
      choice(
        ...additiveOperators.map((operator) =>
          seq(operator, optional($.castop)),
        ),
      ),
    _comp_op: ($) =>
      choice(
        ...comparativeOperators.map((operator) =>
          seq(operator, optional($.castop)),
        ),
      ),

    bin_expr: ($) =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field("left", $._expr),
            // @ts-ignore
            field("operator", alias("&&", $.operator)),
            field("right", $._expr),
          ),
        ),
        prec.left(
          PREC.or,
          seq(
            field("left", $._expr),
            // @ts-ignore
            field("operator", alias("||", $.operator)),
            field("right", $._expr),
          ),
        ),
        prec.left(
          PREC.multiplicative,
          seq(
            field("left", $._expr),
            // @ts-ignore
            field("operator", alias($._mult_op, $.operator)),
            field("right", $._expr),
          ),
        ),
        prec.left(
          PREC.additive,
          seq(
            field("left", $._expr),
            // @ts-ignore
            field("operator", alias($._add_op, $.operator)),
            field("right", $._expr),
          ),
        ),
        prec.left(
          PREC.comparative,
          seq(
            field("left", $._expr),
            // @ts-ignore
            field("operator", alias($._comp_op, $.operator)),
            field("right", $._expr),
          ),
        ),
      ),

    true: (_) => "true",
    false: (_) => "false",

    index_expr: ($) =>
      prec(
        PREC.access,
        seq(field("operand", $.identifier), field("index", $._arr_access)),
      ),

    _expr: ($) =>
      choice(
        $.identifier,
        $.index_expr,
        $.true,
        $.false,
        $.int_literal,
        $.mem_access,
        $.pack_expr,
        $.cast_expr,
        $.unary_expr,
        $.bin_expr,
        $.parens_expr,
        $.call_expr,
        $.intrinsic_expr,
        $.ternary_expr,
      ),
    // ------

    // left values ------
    ignore: (_) => token("_"),

    _lvalue: ($) => choice($.ignore, $.identifier, $.index_expr, $.mem_access),
    // ------

    // control instructions ------
    block: ($) => braces(repeat($._instr)),

    _instr: ($) => seq(repeat($.annotations), $._instr_r),

    if_statement: ($) =>
      choice(
        seq(
          "if",
          field("condition", $._expr),
          field("consequence", $.block),
          optional(
            seq("else", field("alternative", choice($.if_statement, $.block))),
          ),
        ),
      ),

    assign: ($) =>
      prec.right(
        PREC.assignment,
        seq(
          field("left", $.lvalues),
          field("operator", alias($.assign_op, $.operator)),
          field("right", $._expr),
          field("condition", optional(seq("if", $._expr))),
          ";",
        ),
      ),

    array_init: ($) =>
      seq("ArrayInit", field("name", parens($.identifier)), ";"),

    for_loop: ($) =>
      seq(
        "for",
        field("loop_var", alias($.identifier, $.variable)),
        "=",
        field("start", $._expr),
        choice("to", "downto"),
        field("end", $._expr),
        field("body", $.block),
      ),

    while_loop: ($) =>
      seq(
        "while",
        field("pre_condition", optional($.block)),
        "(",
        field("body", $._expr),
        ")",
        field("post_condition", optional($.block)),
      ),

    lvalues: ($) =>
      choice(
        tuple1($._lvalue),
        seq("(", ")"),
        $.implicites,
        seq($.implicites, ",", rtuple1($._lvalue)),
      ),

    _fun_def_start: ($) =>
      seq(
        field("annot", repeat($.annotations)),
        field("call_convention", optional($.call_conv)),
        "fn",
      ),

    function_definition: ($) =>
      seq(
        $._fun_def_start,
        field("name", $.identifier),
        field("args", parens_tuple($.param_decl)),
        field("return_type", optional(seq("->", tuple($._annot_stor_type)))),
        field("body", $.function_body),
      ),

    return_statement: ($) => seq("return", tuple($.identifier), ";"),

    function_body: ($) =>
      choice(braces(seq(repeat($._instr), optional($.return_statement)))),

    param_decl: ($) =>
      seq(
        field("annotations", repeat($.annotations)),
        field(
          "declarations",
          seq(
            field("type", $._stor_type),
            field(
              "variables",
              repeat1(
                choice(
                  field("var", alias($.identifier, $.parameter)),
                  seq(
                    field("var", alias($.identifier, $.parameter)),
                    "=",
                    field("default_value", $._expr),
                  ),
                ),
              ),
            ),
          ),
        ),
      ),

    _pointer: ($) => seq(optional($._writable), "ptr"),

    _decl: ($) =>
      choice(
        field("v", alias($.identifier, $.variable)),
        seq(
          field("v", alias($.identifier, $.variable)),
          "=",
          field("e", $._expr),
        ),
      ),

    var_decl: ($) =>
      seq(
        field("type", $._stor_type),
        field("variables", sep1($._decl, optional(","))),
      ),

    storage: ($) =>
      choice(
        seq("reg", optional($._pointer)),
        seq("stack", optional($._pointer)),
        "inline",
        "global",
      ),

    _annot_stor_type: ($) =>
      seq(
        field("annotations", repeat($.annotations)),
        field("storage_type", $._stor_type),
      ),

    _stor_type: ($) => seq(field("storage", $.storage), field("type", $.type)),
    // ------

    // annotations ------
    swsize: (_) => token(seq(SIZE, SIGNLETTER)),

    _cast: ($) => alias(choice($._int_type, $.swsize), $.type),

    castop: ($) => choice($.swsize, $.svsize),

    int_literal: (_) => token(intLiteral),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
            $.escape_sequence,
          ),
        ),
        '"',
      ),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*(::([a-zA-Z_][a-zA-Z0-9_]*))*/,
